# GreenFoodLens

./: .gitignore  CSV_cfp_wfp_ingredients_2.0.csv  README.md  experiment_config.yaml  ingredient_food_kg_names.csv  pyproject.toml  revised_su-eatable-life_taxonomy.json  test_model_sustainability.py
answers_analysis/: answers_analysis.ipynb  evaluate_llm_labeling.py  guidance_ingredient_labeling.py  llama_cpp_grammar_ingredient_labeling.py  llama_cpp_outlines_ingredient_labeling.py  llm_ingredient_labeling.py  prompt_templates.py  prompt_templates_guidance.py  schema.json  sts_ingredient_labeling.py  utils.py
src/: evaluate_llm_labeling.py  labeling_analysis.ipynb  llama_cpp_grammar_ingredient_labeling.py  prompt_templates_guidance.py  semantic_matching_eda.py  utils.py
zenodo_data/: README.md
