[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greenFoodLens"
version = "1.0.0"
description = "GreenFoodLens: Sustainability Labels for Food Recommendation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Giacomo Medda", email = "giacomo.medda@unica.it"},
]
keywords = ["sustainability", "food", "recommendation", "llm", "labeling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "polars",
    "llama-cpp-python",
    "sentence-transformers",
    "recbole",
    "torch<=2.4.0",
    "numpy",
    "matplotlib",
    "seaborn",
    "tqdm",
    "texttable",
    "jupyter",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[project.urls]
Repository = "https://github.com/tail-unica/GreenFoodLens"

[tool.setuptools.packages.find]
where = ["src"]
